--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ authors = ["0skar16"]
 anyhow = "1"
 clap = { version = "4.3", features = ["derive"] }
 colored = "2.0.0"
+fasthash = "0.4.0"
 glob = "0.3.1"
 home = "0.5.5"
 serde = { version = "1.0.165", features = ["derive"] }
